changes made to spacing [issue #4]

--- a/css/styles.css
+++ b/css/styles.css
@@ -702,7 +702,7 @@
 			.involvedDesc {
 				width: 280px;
 				margin-top: 60px;
-				font-size: 14px;
+				font-size: 13px;
 			}
 
 			.involvedDesc:last-child{
@@ -753,7 +753,7 @@
 			.involvedDesc {
 				width: 300px;
 				margin-top: 60px;
-				font-size: 14px;
+				font-size: 13px;
 			}
 
 			.mid {
